date values now appear in human-readable form, fixed repeating appearance of warning for invalid tweet submission

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -22,7 +22,7 @@ body {
   font-family: Roboto Condensed, sans-serif;
 }
 .container {
-  padding-top: 140px;
+  padding-top: 100px;
   width: 450px;
   margin: auto;
   background-color: white;
